--- a/people_listing.html
+++ b/people_listing.html
@@ -94,6 +94,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Agatha Christie.png">Agatha Christie.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Agnès Varda.png">Agnès Varda.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Ahmed Ahmed Poor.png">Ahmed Ahmed Poor.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Ahmed Ahmed.png">Ahmed Ahmed.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Ahmed Best.png">Ahmed Best.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Ahna O'Reilly.png">Ahna O'Reilly.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aida Turturro.png">Aida Turturro.png</a>
@@ -1301,6 +1302,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danielle Rose Russell.png">Danielle Rose Russell.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danielle Sanchez-Witzel.png">Danielle Sanchez-Witzel.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danny Aiello.png">Danny Aiello.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danny Bhoy.png">Danny Bhoy.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danny Boyle.png">Danny Boyle.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danny DeVito.png">Danny DeVito.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Danny Elfman.png">Danny Elfman.png</a>
@@ -4142,6 +4144,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Natasha O'Keeffe.png">Natasha O'Keeffe.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Natasha Rothwell.png">Natasha Rothwell.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Natassia Malthe.png">Natassia Malthe.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Nate Bargatze.png">Nate Bargatze.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Nate Moore.png">Nate Moore.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Nathalie Boltt.png">Nathalie Boltt.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Nathalie Emmanuel.png">Nathalie Emmanuel.png</a>
@@ -4318,6 +4321,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Owen Wilson.png">Owen Wilson.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/P.H. Moriarty.png">P.H. Moriarty.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/P.J. Byrne.png">P.J. Byrne.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Pablo Francisco.png">Pablo Francisco.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Pablo Larraín.png">Pablo Larraín.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Pablo Schreiber.png">Pablo Schreiber.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Packy Lee.png">Packy Lee.png</a>
@@ -5267,6 +5271,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Schirripa.png">Steve Schirripa.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Starkey.png">Steve Starkey.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Toussaint.png">Steve Toussaint.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Trevino.png">Steve Trevino.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Zahn.png">Steve Zahn.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve Zissis.png">Steve Zissis.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Steve-O.png">Steve-O.png</a>
@@ -5862,7 +5867,7 @@
 		</p>
 		<p>
 
-0 directories, 5828 files
+0 directories, 5833 files
 		<br><br>
 		</p>
 		<hr>
