--- a/people_listing.html
+++ b/people_listing.html
@@ -3414,6 +3414,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Laurie Metcalf.png">Laurie Metcalf.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Lavell Crawford.png">Lavell Crawford.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Lawrence Bender.png">Lawrence Bender.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Lawrence Gordon Clark.png">Lawrence Gordon Clark.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Lawrence Kasdan.png">Lawrence Kasdan.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Lawrence Makoare.png">Lawrence Makoare.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Laz Alonso.png">Laz Alonso.png</a>
@@ -5867,7 +5868,7 @@
 		</p>
 		<p>
 
-0 directories, 5833 files
+0 directories, 5834 files
 		<br><br>
 		</p>
 		<hr>
