--- a/people_listing.html
+++ b/people_listing.html
@@ -32,6 +32,7 @@
 
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron Beelner.png">Aaron Beelner.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron Eckhart.png">Aaron Eckhart.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron Karo.png">Aaron Karo.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron Lazar.png">Aaron Lazar.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron Nee.png">Aaron Nee.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Aaron O'Connell.png">Aaron O'Connell.png</a>
@@ -5868,7 +5869,7 @@
 		</p>
 		<p>
 
-0 directories, 5834 files
+0 directories, 5835 files
 		<br><br>
 		</p>
 		<hr>
