--- a/people_listing.html
+++ b/people_listing.html
@@ -2267,6 +2267,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hoyte van Hoytema.png">Hoyte van Hoytema.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hubert Selby Jr..png">Hubert Selby Jr..png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hugh Bonneville.png">Hugh Bonneville.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hugh Dancy.png">Hugh Dancy.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hugh Dennis.png">Hugh Dennis.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hugh Grant.png">Hugh Grant.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Hugh Jackman.png">Hugh Jackman.png</a>
@@ -5869,7 +5870,7 @@
 		</p>
 		<p>
 
-0 directories, 5835 files
+0 directories, 5836 files
 		<br><br>
 		</p>
 		<hr>
