added missing people poster

--- a/people_listing.html
+++ b/people_listing.html
@@ -5542,6 +5542,7 @@
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Heughan.png">Sam Heughan.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Jaeger.png">Sam Jaeger.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Kinison.png">Sam Kinison.png</a>
+<br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Larson.png">Sam Larson.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Liu.png">Sam Liu.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Mendes.png">Sam Mendes.png</a>
 <br>				   |-- <a class="NORM" href="https://github.com/bullmoose20/People-Photo-Posters/blob/main/transparent/Sam Morril.png">Sam Morril.png</a>
@@ -6570,7 +6571,7 @@
 		</p>
 		<p>
 
-0 directories, 6536 files
+0 directories, 6537 files
 		<br><br>
 		</p>
 		<hr>
